--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.h-100{
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.gap-8{
+  gap: 8px;
+}
+.gap-16{
+  gap: 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.button{
+  width: 100%;
+  padding: 10px 20px;
+  border-radius: 26px;
+  background-color: #dfd212;
+  color: white;
+  font-weight: 500;  
+  border: 1px solid #dfd212;
+  cursor: pointer;
+}
+
+.button:hover{
+  color: var(--color-101e31);
+  background-color: white;
+}
+
+
+
+/* Auth CSS */
+
+.auth-wrapper{
+  background-color: #f7f7f7;
+  min-width: 100dvw;
+  min-height: 100dvh;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.auth-card{
+  width: 420px;
+  box-shadow: 0 0 2px #dfd212;
+  border-radius: 10px;
+  background-color: white;
+}
+
+.auth-card input{
+  height: 44px;
+  background-color: var(--color-f5f5f7);
+  font-size: 14px;
+  border: 1px solid #a3a19c;
+}
+
+.password-eye-auth{
+  position: absolute;
+  right: 12px;
+  top: 4px;
+  font-size: 22px;
+}
+
+
+/* Auth CSS ends */
+
+
+
+/* Dashboard Layout CSS */
+
+.ant-layout{
+  min-height: 100dvh;
+}
+
+.demo-logo-vertical{
+  width: 100%;
+  height: 64px;
+  font-size: 18px;
+  text-align: center;
+  background-color: #dfd212;
+  margin-bottom: 4px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.heading-container{
+  height: 64px;
+}
+.menu-bar, .admin-details{
+  height: 64px;
+}
+.admin-email{
+  height: 64px;
+}
+.admin-email > span{
+  line-height: normal;
+}
+/* Dashboard Layout ends */
+
+
+/* Dashboard CSS */
+
+.dashboard-wrapper{
+  background-color: transparent;
+  min-width: 100%;
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  gap: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+/* Dashboard CSS ends */
