--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,10 @@
 
 .button{
   width: 100%;
-  padding: 10px 20px;
-  border-radius: 26px;
+  padding: 6px 14px;
+  border-radius: 5px;
   background-color: #dfd212;
-  color: white;
+  color: #001529;
   font-weight: 500;  
   border: 1px solid #dfd212;
   cursor: pointer;
@@ -30,6 +30,10 @@
 .button:hover{
   color: var(--color-101e31);
   background-color: white;
+}
+
+.box-container{
+  box-shadow: 0 0 1px #001529;
 }
 
 
@@ -65,7 +69,10 @@
   top: 4px;
   font-size: 22px;
 }
-
+.auth-error{
+  color: red;
+  font-size: 12px;
+}
 
 /* Auth CSS ends */
 
@@ -112,10 +119,68 @@
   min-height: 100%;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   flex-direction: column;
   gap: 16px;
 }
 
 
 /* Dashboard CSS ends */
+
+/* Add forms */
+
+.form-floating>.form-select{
+  padding-top: 12px;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+}
+
+.product-image-dropzone{
+  width: 100%;
+  height: 120px;
+  background-color: #f5f5f5;
+  border: 1px dashed #001529;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-bottom: 16px;
+}
+
+.image-container > img{
+  border-radius: 6px;
+}
+
+.close-icon{
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  right: 4px;
+  top: 4px;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+  color: #f5f5f5;
+}
+.close-icon:hover{
+  background-color: #f5f5f5;
+  color: black;
+}
+
+.multi-select-color > div{
+  width: 100%;
+
+}
+.multiselect-container .searchWrapper {  
+  width: 100%;
+  padding: 16px;
+}
+
+
+/* End CSS Add forms */
